# common/request/system/dept_request.go
@@ -1,7 +1,5 @@
 package request
 
-import "resetgoapi.com/rest_go_api/common/request"
-
 type CreateDeptRequest struct {
 	// 部门名称
 	DeptName string `json:"deptName" form:"deptName"`
@@ -14,7 +12,7 @@ type CreateDeptRequest struct {
 	// 联系电话
 	Phone string `json:"phone" form:"phone"`
 	// 启用状态 0 启用 1 禁用
-	Status bool `json:"status" form:"status"`
+	Status int `json:"status" form:"status"`
 	// 备注
 	Remark string `json:"remark" form:"remark"`
 }
@@ -31,10 +29,13 @@ type UpdateDeptRequest struct {
 	// 联系电话
 	Phone string `json:"phone" form:"phone"`
 	// 启用状态 0 启用 1 禁用
-	Status bool `json:"status" form:"status"`
+	Status int `json:"status" form:"status"`
 	// 备注
 	Remark string `json:"remark" form:"remark"`
 }
 type DeptListRequest struct {
-	request.PageRequest
+	// 部门名称
+	DeptName string `json:"deptName" form:"deptName"`
+	// 启用状态 0 启用 1 禁用
+	Status *int `json:"status" form:"status"`
 }
